environments/prod/kubernetes/services/envops/kubernetes-dashboard-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard-proxy
  namespace: envops
  labels:
    app: kubernetes-dashboard-proxy
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-dashboard-proxy
  revisionHistoryLimit: 1
  template:
    metadata:
      name: kubernetes-dashboard-proxy
      labels:
        app: kubernetes-dashboard-proxy
        env: prod
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: kubernetes-dashboard-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:v7.4.0"
        imagePullPolicy: IfNotPresent
        args:
          - "--http-address=0.0.0.0:4180"
          - "--config=/etc/oauth2_proxy/oauth2_proxy.cfg"
          - "--skip-provider-button=true"
          - "--scope=groups openid email"
          - "--provider=oidc"
          - "--cookie-expire=0h30m0s"
          - "--code-challenge-method=S256"
          - "--pass-access-token=true"
          - "--oidc-issuer-url=https://steblynskyi.onelogin.com/oidc/2"
          - "--redirect-url=https://envops-kubernetes-dashboard-proxy.steblynskyi.com/oauth2/callback"
          - "--ssl-upstream-insecure-skip-verify=true"
          - "--upstream=https://kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local"
        ports:
          - containerPort: 4180
            name: http
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          successThreshold: 1
          periodSeconds: 10
        resources:
          requests:
              cpu: 25m
              memory: 64Mi
          limits:
              cpu: 250m
              memory: 512Mi
        volumeMounts:
        - mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
          name: configmain
          subPath: oauth2_proxy.cfg
      volumes:
      - configMap:
          defaultMode: 420
          name: kubernetes-dashboard-proxy
        name: configmain
      tolerations:
        []
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: kubernetes-dashboard-proxy
  namespace: envops
  labels:
    Domain: envops-kubernetes-dashboard-proxy.steblynskyi.com
spec:
  selector:
    app: kubernetes-dashboard-proxy
    env: prod
  ports:
    - port: 80
      name: http
      targetPort: 4180
      protocol: TCP
  type: NodePort
